2010-12-28	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - use strftime to format timestamps
	  - made width_details, time_format[] and time_string_len constant
	  - added numeric timezone to the date format

2010-12-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - added xattrs2array, acl2array and get_attribute_values functions
	  - added print_dbline_attributes function, changes included:
		- wrap attribute values instead of cut them off
		- side-by-side output of acl and xattrs values
		- use '|' to separate the old value from the new one
		- use node->changed_attributes instead of recalculate the
		  changed attributes
		- print added or removed attributes of changed entries if forced
		  via report_attributes
	  - removed obsolete code
	  - print details about added and removed entries in verbose level 6
	    or higher, closes feature request 1460461
	  - print added and removed attribute values of changed entries in
	    verbose level 6 or higher

2010-12-26	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - fixed type of summary_char[]
	  - fixed typo in comment

2010-11-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* doc/aide.1.in:
	  - fixed format in FILES section
	  - added hint on how to decode base64 encoded checksums

2010-11-26	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* doc/manual.html:
	 - applied changes by Jack Blankenship <Jack.Blankenship@bcbssc.com>

2010-11-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - added missing declaration of aclt variable

2010-11-14	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/conf_yacc.y:
	  - fixed declaration of conftext variable
	* configure.in:
	  - fixed compilation under Solaris
	* README:
	  - added hint to use --disable-static under Solaris 10/OpenSolaris

2010-10-12	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c, src/do_md.c:
	  - replaced "File" by "Entry"
